--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "bun run app/main.ts"
     },
     "dependencies": {
+        "@types/node": "^20.12.7",
         "async": "^3.2.0"
     }
 }
